# wiki-stream-analytics

./: .env.example  .gitignore  LICENSE  PLAN.md  PROMPTS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-deploy.yml  ci.yml
airflow/: Dockerfile  railway.toml  requirements-airflow.txt
airflow/dags/: dbt_hourly.py  maintenance_daily.py
airflow/lib/: dq.py  maintenance.py  partitions.py
airflow/plugins/: alerts.py
airflow/tests/: conftest.py  test_dags.py  test_dq.py  test_partitions.py
dashboard/: Dockerfile  pyproject.toml  railway.toml
dashboard/.streamlit/: config.toml
dashboard/src/dashboard/: __init__.py  app.py  charts.py  config.py  live.py  queries.py  urls.py
dashboard/tests/: conftest.py  test_charts.py  test_live.py  test_queries.py  test_urls.py
dbt-docs/: Dockerfile  nginx.conf  railway.toml
dbt/wiki_analytics/: .user.yml  dbt_project.yml  profiles.yml
dbt/wiki_analytics/models/marts/: _marts.yml  agg_edits_hourly.sql  dim_wiki.sql  fct_edits.sql  mart_editor_activity_daily.sql  mart_top_pages_daily.sql
dbt/wiki_analytics/models/staging/: _sources.yml  _staging.yml  stg_recentchange.sql
dbt/wiki_analytics/tests/: assert_agg_edits_hourly_unique.sql  assert_mart_editor_activity_daily_unique.sql  assert_mart_top_pages_daily_unique.sql
dbt/wiki_analytics/tests/generic/: range_between.sql
docs/: architecture.md  dbt.md  railway-deploy.md
scripts/: seed_ci_fixtures.py
services/consumer/: Dockerfile  pyproject.toml
services/consumer/src/consumer/: __init__.py  __main__.py  batch.py  config.py  main.py  mapper.py  pg_writer.py  redis_store.py
services/consumer/tests/: conftest.py  test_batch.py  test_consumer_placeholder.py  test_mapper.py  test_redis_store.py
services/dbt-runner/: Dockerfile  alerts.py  railway.toml  run.py
services/dbt-runner/tests/: conftest.py  test_alerts.py
services/healthchecker/: Dockerfile  pyproject.toml  railway.toml
services/healthchecker/src/healthchecker/: __init__.py  __main__.py  alerter.py  app.py  config.py  main.py  models.py  runner.py  state_store.py
services/healthchecker/src/healthchecker/checks/: __init__.py  base.py  dashboard.py  db_size.py  freshness.py  kafka_lag.py  redis_check.py
services/healthchecker/tests/: test_alerter.py  test_app.py  test_dashboard.py  test_db_size.py  test_freshness.py  test_healthchecker_placeholder.py  test_kafka_lag.py  test_redis_check.py
services/producer/: Dockerfile  pyproject.toml
services/producer/src/producer/: __init__.py  __main__.py  backoff.py  config.py  kafka_sink.py  main.py  models.py  sse.py
services/producer/tests/: test_backoff.py  test_kafka_mapping.py  test_models.py  test_producer_placeholder.py  test_sse.py
sql/: migrate.py
sql/fixtures/: ci_seed.sql
sql/init/: 001_raw.sql  002_airflow_meta.sql  003_dashboard_grants.sql  00_create_airflow_db.sh
