[project]
name = "dashboard"
version = "0.1.0"
description = "Streamlit dashboard for Wiki Stream Analytics"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.41",
    "plotly>=5.24",
    "pandas>=2.2",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]

[dependency-groups]
dev = [
    "fakeredis>=2.26",
    "pytest>=8.3",
]
