[project]
name = "consumer"
version = "0.1.0"
description = "Consumes wiki events from Kafka and writes them to the PostgreSQL raw layer"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/consumer"]
