[project]
name = "healthchecker"
version = "0.1.0"
description = "Monitors the pipeline (Kafka lag, data freshness, Redis) and sends Telegram alerts"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/healthchecker"]
