[project]
name = "healthchecker"
version = "0.1.0"
description = "Monitors the pipeline (Kafka lag, data freshness, Redis) and sends Telegram alerts"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.6",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/healthchecker"]

[dependency-groups]
dev = [
    "fakeredis>=2.26",
    "httpx>=0.28",
    "pytest>=8.3",
]
