[project]
name = "producer"
version = "0.1.0"
description = "Reads Wikimedia EventStreams (SSE) and publishes events to Kafka"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/producer"]
