[project]
name = "producer"
version = "0.1.0"
description = "Reads Wikimedia EventStreams (SSE) and publishes events to Kafka"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.6",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/producer"]
